--- a/brokenmetaljewelry/public/index.html
+++ b/brokenmetaljewelry/public/index.html
@@ -10,7 +10,10 @@
       content="Portfolio of Tyler Anderson, full stack web developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
+    <!-- GoogleFonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Acme&family=Amatic+SC:wght@700&family=Indie+Flower&display=swap" rel="stylesheet">
+
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Broken Metal Jewelry</title>
