--- a/brokenmetaljewelry/public/index.html
+++ b/brokenmetaljewelry/public/index.html
@@ -8,7 +8,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio of Tyler Anderson, full stack web developer"
+      content="Business website for Broken Metal Jewelry"
+      
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- GoogleFonts link -->
